--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "git.ignoreLimitWarning": true
+  "git.ignoreLimitWarning": true,
+  "eslint.trace.server": null,
+  "eslint.workingDirectories": [],
+  "eslint.rules.customizations": [],
+  "eslint.codeAction.showDocumentation": {
+
+    "enable": true
+  }
 }
